--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,10 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+/.pnp.*
+.yarn/cache
+.yarn/unplugged
+.yarn/install-state.gz
 
 # testing
 /coverage
@@ -24,18 +21,19 @@
 .DS_Store
 *.pem
 
-# debug
+# debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files (ignore but allow optional commit if needed)
+.env
+.env.*
 
-# vercel
-.vercel
+# Vercel
+/vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
